css/styles.css
.spacer {
    width: 100px;
    height: 2px;
    margin: auto;
    color: #91a3b0;
}

.container-intro {
    margin-top: 5vh;
}

.vertical-center {
    min-height: 100%; /* Fallback for browsers do NOT support vh unit */
    min-height: 100vh; /* These two lines are counted as one :-)       */

    display: flex;
    width: 100vh;
    align-items: center;
}

.social-icon > a {
    padding: 5px;
    margin-right: 2px;
    margin-left: 2px;
    color: #000000;
}

.navbar-default {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    color: #FFFFFF;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus, a:hover, a:active, .navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
    color: #3498db;
}

#contact-button {
    margin-top: 40px;
}

#contact-button > a:hover {
    background-color: #91a3b0;

}

h1 {
    font-size: 400%;
    font-family: 'Roboto', sans-serif;
}

.intro-section > p {
    padding-top: 150px;
    text-align: center;
    background: #fff;
}

#contact-text {
    text-align: left;
}

.contact-section {
    margin-bottom: 100px;
}

#contact-title {
    margin-bottom: 80px;
}

.form {
    text-align: left;
}

.contact-section .button {
    margin-top: 10px;
    text-align: right;
}

.text {
    text-align: left;
}

.about-me {
    margin-bottom: 30px;
}

.education > h1 {
    margin-bottom: 40px;
}

.navbar-text > a,
.navbar-text > p {
    color: #A9B3BB;
}

.navbar-text > a:hover {
    color: #3498db;
}

.navbar-text > p {
    font-size: 110%;
}

.navbar-inverse {
    margin-bottom: 0px;
}

.container-grey-section {
    width: 100%;

    background: #eee;
}

.container-white-section {
    width: 100%;
    background: #fff;
}

